--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "elliptic": "6.5.4",
     "dotenv": "10.0.0",
     "@types/elliptic": "6.4.14",
-    "base64url": "^3.0.1"
+    "base64url": "^3.0.1",
+    "js-sha256": "^0.9.0",
+    "secp256r1": "^0.0.3"
   }
 }
