add google protobuf message generation option

--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "react-dom": "18.2.0",
     "typescript": "5.1.6",
     "google-protobuf": "^3.19.1",
+    "protobufjs": "^7.2.4",
     "elliptic": "6.5.4",
     "dotenv": "10.0.0",
     "@types/elliptic": "6.4.14",
     "base64url": "^3.0.1",
     "js-sha256": "^0.9.0",
-    "secp256r1": "^0.0.3"
+    "secp256r1": "^0.0.3",
+    "@ledgerhq/wallet-api-client": "0.15.5",
+    "bignumber.js": "9.1.0"
   }
 }
