--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ledgerhq/wallet-api-client": "0.15.5",
+    "@types/elliptic": "6.4.14",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@types/secp256k1": "^4.0.3",
+    "base64url": "^3.0.1",
+    "bignumber.js": "9.1.0",
+    "dotenv": "10.0.0",
+    "elliptic": "6.5.4",
+    "google-protobuf": "^3.19.1",
+    "js-sha256": "^0.9.0",
     "next": "13.4.12",
+    "protobufjs": "^7.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6",
-    "google-protobuf": "^3.19.1",
-    "protobufjs": "^7.2.4",
-    "elliptic": "6.5.4",
-    "dotenv": "10.0.0",
-    "@types/elliptic": "6.4.14",
-    "base64url": "^3.0.1",
-    "js-sha256": "^0.9.0",
+    "secp256k1": "^3.7.1",
     "secp256r1": "^0.0.3",
-    "@ledgerhq/wallet-api-client": "0.15.5",
-    "bignumber.js": "9.1.0"
+    "typescript": "5.1.6"
   }
 }
