--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "react-dom": "18.2.0",
     "secp256k1": "^5.0.0",
     "secp256r1": "^0.0.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "node-dir": "^0.1.17"
+  },
+  "devDependencies": {
+    "@zondax/zemu": "^0.44.0"
   }
 }
